# restate

./: meson.build
data/: Application.css  com.github.friendofentropy.restate.appdata.xml  com.github.friendofentropy.restate.desktop  com.github.friendofentropy.restate.gresource.xml  com.github.friendofentropy.restate.gschema.xml  meson.build
src/: Application.vala  MainWindow.vala  NameValuePair.vala  RequestHeaderBox.vala  RequestView.vala  ResponseView.vala  Stylesheet.vala  TabHeaderButton.vala  meson.build
